--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"@fontsource/inter": "^5.0.5",
 		"@iconify/svelte": "^3.1.4",
 		"axios": "^1.4.0",
-		"colorthief": "^2.4.0",
+		"date-fns": "^2.30.0",
 		"zod": "^3.21.4"
 	}
 }
