--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"dependencies": {
 		"@fontsource/inter": "^5.0.5",
 		"@iconify/svelte": "^3.1.4",
+		"@svelteuidev/composables": "^0.15.3",
 		"axios": "^1.4.0",
 		"lodash": "^4.17.21",
 		"zod": "^3.21.4"
