--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource/arvo": "^5.0.8",
 		"@fontsource/inter": "^5.0.5",
 		"@iconify/svelte": "^3.1.4",
 		"@svelteuidev/composables": "^0.15.3",
