--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@iconify/svelte": "^3.1.4",
 		"@svelteuidev/composables": "^0.15.3",
 		"axios": "^1.4.0",
+		"date-fns": "^2.30.0",
 		"lodash": "^4.17.21",
 		"zod": "^3.21.4"
 	}
